--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    networks:
+      - mongo
     volumes: 
       - type: bind
         source: "./workspace"
@@ -15,6 +17,11 @@ services:
     ports:
       - 27017:27017
     environment:
+      PS1: '\e[92m\u\e[0m@\e[94m\h\e[0m:\e[35m\w\e[0m# '
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: test123*
+      MONGO_INITDB_ROOT_PASSWORD: test123
       MONGO_INITDB_DATABASE: test
+
+networks:
+  mongo:
+    driver: bridge
